# sinapse

./: .gitignore  pyproject.toml  requirements.txt
apps/authentication/: decorators.py  forms.py  models.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_usermodel_id.py  0003_alter_usermodel_role.py  0004_alter_usermodel_managers_alter_usermodel_deleted_at.py  0005_alter_usermodel_role.py
apps/authentication/templates/: login.html  register.html
apps/certificates/: forms.py  models.py  urls.py  views.py
apps/certificates/migrations/: 0001_initial.py
apps/certificates/templates/: certificate_template_list.html  certificate_template_preview.html  create_certificate_template.html  duplicate_certificate_template.html
apps/core/: models.py
apps/events/: forms.py  models.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_alter_categorymodel_options_alter_eventmodel_options_and_more.py  0003_alter_categorymodel_deleted_at_and_more.py  0004_eventparticipantmodel_attended_at_and_more.py  0005_insert_initial_categories.py
apps/events/templates/certificates/: default.html
apps/events/templates/events/: cancel_event.html  create_event.html  edit_event.html  event_attendance_list.html  event_details.html  finish_event.html  index.html  my_certificates.html
config/: settings.py  urls.py
static/js/: modals.js
templates/: 403.html  404.html  index.html
templates/partials/: _head.html  _header.html  base.html
