[project]
name = "sinapse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.4",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
]
